tests/baselines/reference/asyncArrowFunction7_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncArrowFunction7_es5.ts(3,24): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncArrowFunction7_es5.ts(3,29): error TS1109: Expression expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncArrowFunction7_es5.ts (2 errors) ====
    var bar = async (): Promise<void> => {
      // 'await' here is an identifier, and not an await expression.
      var foo = async (a = await): Promise<void> => {
                           ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                                ~
!!! error TS1109: Expression expected.
      }
    }